@@ -6,6 +6,8 @@ vivi.core changes
 
 - ZO-51: Implement "move object" UI action
 
+- ZO-51: Implement "create linkobject" action
+
 
 4.62.0 (2021-08-31)
 -------------------
